--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ArtichFox Dynamic feature</string>
     <string name="title_splash">Splash</string>
+    <string name="title_authorization">Authorization</string>
 </resources>
