--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ArtichFox Dynamic feature</string>
     <string name="title_splash">Splash</string>
     <string name="title_authorization">Authorization</string>
+    <string name="title_registration">Registration</string>
 </resources>
